--- a/product.html
+++ b/product.html
@@ -364,7 +364,7 @@
 
         <!-- blog-post-area -->
         <section class="blog-post-area blog-post-bg" data-background="assets/img/bg/blog_post_bg.jpg">
-            <div class="container pb-120">
+            <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6">
                         <div class="section-title text-center mb-40 tg-heading-subheading animation-style3">
